# CityPulseBackend

./: .env.example  .gitignore  DEMO_READY.md  OLLAMA_SETUP.md  README.md  pyproject.toml  setup_ollama.sh
ai_docs/: CityPulse_Backend_Initial_Prompt_Final.md  CityPulse_Implementation_Plan.md  CityPulse_Simplified_Hackathon_Plan.md  Frontend_Features_Guide.md  Frontend_Implementation_Plan.md  Refactoring_Summary.md
app/: __init__.py  config.py  dao.py  deps.py  llm.py  local_media.py  main.py  models.py  s3media.py
app/llm_providers/: __init__.py  base.py  huggingface.py  ollama.py
app/routes/: ask.py  feed.py  health.py  like.py  upload.py
app/utils/: __init__.py  ranking.py  time.py  upload.py  video.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/ask/: page.tsx
frontend/src/app/feed/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/ask/: AskInterface.tsx  QuerySuggestions.tsx  ResponseCard.tsx  SourceVideos.tsx
frontend/src/components/feed/: PullToRefresh.tsx  VideoCard.tsx  VideoFeed.tsx
frontend/src/hooks/: useAskNYC.ts  useFeed.ts  useRubberBand.ts  useUpload.ts
frontend/src/store/: feedStore.ts  index.ts  themeStore.ts  uploadStore.ts  userStore.ts
frontend/src/types/: api.ts  store.ts
scripts/: create_demo_videos.py  create_indexes.py  seed_demo_data.py  test_ai_features.py  test_api_demo.py  test_config.py  test_endpoints.py  test_mongodb.py  test_s3.py
(+19 files in other folders)
